<?xml version="1.0"?>
<package>
  <name>rbl_teleop_keyboard</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop for twist robots.</description>

  <maintainer email="kartiksoni010@gmail.com">Kartik Soni</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rbl_teleop_keyboard</url>

  <author>Kartik Soni</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
